--- a/index.html
+++ b/index.html
@@ -1,116 +1,147 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
 
-<head>
-    <meta charset="UTF-8">
-    <title>Home is...DES 157B!</title>
-
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles.css" rel="stylesheet" />
+
     <script src="script.js" defer></script>
+    <title>Home is...DES 157B!</title>
+  </head>
 
-</head>
-
-<body>
-
+  <body class="delayed-transition">
     <div id="container">
+      <header>
+        <h1 id="name">Brian Tom</h1>
+        <div id="banner" class="delayed-transition">
+          <img class="equation" src="media/eq1.svg" />
+          <img class="equation" src="media/eq2.svg" />
+          <img class="equation" src="media/eq3.svg" />
+          <img class="equation" src="media/eq4.svg" />
+          <img class="equation" src="media/eq5.svg" />
+          <img class="equation" src="media/eq6.svg" />
+          <img class="equation" src="media/eq7.svg" />
+          <img class="equation" src="media/eq8.svg" />
+          <img class="equation" src="media/eq9.svg" />
+          <p class="theorem">
+            Every non-constant polynomial with complex coefficients has at least
+            one complex root
+          </p>
 
-        <header>
+          <p class="theorem">
+            The distribution of a sample variable approximates a normal
+            distribution as the sample size becomes larger, assuming that all
+            samples are identical in size
+          </p>
 
-            <h1>
-                Your name here.
-            </h1>
+          <p class="theorem">
+            Every integer greater than 1 either is prime itself or is the
+            product of a unique combination of prime numbers
+          </p>
 
-            <h2>DES 157B - Interactive Media III - Spring 2023
-            </h2>
+          <p class="theorem">
+            The sum of the reciprocals of the squares of the first n positive
+            integers is equal to pi squared divided by 6
+          </p>
 
-            <!--this is for the interactive banner-->
-            <div id="banner">
-                <h3>This is my banner!</h3>
-            </div>
+          <p class="theorem">
+            If n objects are put into m containers, with n > m, then at least
+            one container must contain more than one object
+          </p>
 
-        </header>
+          <p class="theorem">
+            If G is a finite group and p is a prime number dividing the order of
+            G, then G contains an element of order p
+          </p>
+          <p class="theorem">
+            If p is a prime number, then for any integer a, the number a raised
+            to the (p-1)th power is congruent to 1 modulo p
+          </p>
+          <p class="theorem">
+            Every simply connected, closed three-dimensional manifold is
+            homeomorphic to a three-dimensional sphere
+          </p>
+          <p class="theorem">
+            Every bounded sequence in &#8477; has a convergent subsequence.
+          </p>
 
-        <main>
+          <h2 class="delayed-transition">
+            DES 157B - Interactive Media III - Spring 2023
+          </h2>
+        </div>
+      </header>
 
-            <section class="group"><section id="projects">
+      <main>
+        <section class="group">
+          <section id="projects">
+            <h3>ministudios</h3>
+            <nav>
+              <ol>
+                <li><a href="#">blockbuster video</a></li>
+                <li><a href="#">check yourself</a></li>
+                <li><a href="#">library liberty</a></li>
+              </ol>
+            </nav>
+            <h3>toolkit</h3>
+            <nav>
+              <ol>
+                <li><a href="#">touch events</a></li>
+                <li><a href="#">lazy loader</a></li>
+                <li><a href="#">arrow functions</a></li>
+              </ol>
+            </nav>
+          </section>
 
-                <h3>ministudios</h3>
-                <nav>
-                    <ol>
-                        <li><a href="#">blockbuster video</a></li>
-                        <li><a href="#">check yourself</a></li>
-                        <li><a href="#">library liberty</a></li>
-                    </ol>
-                </nav>
-                <h3>toolkit</h3>
-                <nav>
-                    <ol>
-                        <li><a href="#">touch events</a></li>
-                        <li><a href="#">lazy loader</a></li>
-                        <li><a href="#">arrow functions</a></li>
-                    </ol>
-                </nav>
+          <section id="research">
+            <h3>research</h3>
+            <nav>
+              <ul>
+                <li><a href="#">selfie seal</a></li>
+                <li><a href="#">interviews</a></li>
+                <li><a href="#">annotated bibliography</a></li>
+                <li><a href="#">comparative analysis</a></li>
+                <li><a href="#">visual research</a></li>
+                <li><a href="#">feasibility report</a></li>
+              </ul>
+            </nav>
+          </section>
+        </section>
+        <section class="group">
+          <section id="development">
+            <h3>development</h3>
+            <nav>
+              <ul>
+                <li><a href="#">topic choice</a></li>
+                <li><a href="#">project brief</a></li>
+                <li><a href="#">storyboard</a></li>
+                <li><a href="#">flows</a></li>
+                <li><a href="#">interactive comp</a></li>
+                <li><a href="#">version one</a></li>
+                <li><a href="#">version two</a></li>
+                <li><a href="#">user test</a></li>
+                <li><a href="#">version three</a></li>
+              </ul>
+            </nav>
+          </section>
 
-            </section>
-
-            <section id="research">
-                <h3>research</h3>
-                <nav>
-                    <ul>
-                        <li><a href="#">selfie seal</a>
-                        </li>
-                        <li><a href="#">interviews</a>
-                        </li>
-                        <li><a href="#">annotated bibliography</a>
-                        </li>
-                        <li><a href="#">comparative analysis</a>
-                        </li>
-                        <li><a href="#">visual research</a>
-                        </li>
-                        <li><a href="#">feasibility report</a>
-                        </li>
-                    </ul>
-                </nav>
-
-            </section></section>
-<section class="group">
-            <section id="development">
-                <h3>development</h3>
-                <nav>
-                    <ul>
-                        <li><a href="#">topic choice</a></li>
-                        <li><a href="#">project brief</a></li>
-                        <li><a href="#">storyboard</a></li>
-                        <li><a href="#">flows</a></li>
-                        <li><a href="#">interactive comp</a></li>
-                        <li><a href="#">version one</a></li>
-                        <li><a href="#">version two</a></li>
-                        <li><a href="#">user test</a></li>
-                        <li><a href="#">version three</a></li>
-                    </ul>
-                </nav>
-            </section>
-
-            <section id="capstone">
-                <h3>capstone</h3>
-                <nav>
-                    <ul>
-                        <li><a href="#">case study</a></li>
-                        <li><a href="#">project</a></li>
-                    </ul>
-                </nav>
-            </section>
-            </section>
-
-            <button>switch</button>
-
-        </main>
-
+          <section id="capstone">
+            <h3>capstone</h3>
+            <nav>
+              <ul>
+                <li><a href="#">case study</a></li>
+                <li><a href="#">project</a></li>
+              </ul>
+            </nav>
+          </section>
+        </section>
+        <img id="abc" class="button" src="media/abc.png" width="60px" />
+        <img id="numbers" class="button" src="media/numbers.png" width="60px" />
+      </main>
     </div>
-
-</body>
-
+  </body>
 </html>
