--- a/index.html
+++ b/index.html
@@ -19,15 +19,23 @@
       <header>
         <h1 id="name">Brian Tom</h1>
         <div id="banner" class="delayed-transition">
-          <img class="equation" src="media/eq1.svg" />
-          <img class="equation" src="media/eq2.svg" />
-          <img class="equation" src="media/eq3.svg" />
-          <img class="equation" src="media/eq4.svg" />
-          <img class="equation" src="media/eq5.svg" />
-          <img class="equation" src="media/eq6.svg" />
-          <img class="equation" src="media/eq7.svg" />
-          <img class="equation" src="media/eq8.svg" />
-          <img class="equation" src="media/eq9.svg" />
+          <img class="equation" src="media/eq1.svg" alt="y=e^-x/(1+e^-x)^2" />
+          <img
+            class="equation"
+            src="media/eq2.svg"
+            alt="x=-b+=sqrt(b^2-4ac)/2a"
+          />
+          <img class="equation" src="media/eq3.svg" alt="2+2=4" />
+          <img class="equation" src="media/eq4.svg" alt="d/dx(e^x)=e^x" />
+          <img class="equation" src="media/eq5.svg" alt="y=e^(-2x)" />
+          <img class="equation" src="media/eq6.svg" alt="nCk = n!/(k!(n-k)!)" />
+          <img class="equation" src="media/eq7.svg" alt="F=ma" />
+          <img class="equation" src="media/eq8.svg" alt="e^(ipi)+1=0" />
+          <img
+            class="equation"
+            src="media/eq9.svg"
+            alt="lim(f(x)/g(x)) = lim(f'(x)/g'(x))"
+          />
           <p class="theorem">
             Every non-constant polynomial with complex coefficients has at least
             one complex root
@@ -139,8 +147,14 @@
             </nav>
           </section>
         </section>
-        <img id="abc" class="button" src="media/abc.png" width="60px" />
-        <img id="numbers" class="button" src="media/numbers.png" width="60px" />
+        <img id="abc" class="button" src="media/abc.png" alt="abc" width="60" />
+        <img
+          id="numbers"
+          class="button"
+          src="media/numbers.png"
+          alt="123"
+          width="60"
+        />
       </main>
     </div>
   </body>
