--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h3>research</h3>
             <nav>
               <ul>
-                <li><a href="#">selfie seal</a></li>
+                <li><a href="selfie.html">selfie seal</a></li>
                 <li><a href="#">interviews</a></li>
                 <li><a href="#">annotated bibliography</a></li>
                 <li><a href="#">comparative analysis</a></li>
