--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h3>ministudios</h3>
             <nav>
               <ol>
-                <li><a href="#">blockbuster video</a></li>
+                <li><a href="video/">blockbuster video</a></li>
                 <li><a href="#">check yourself</a></li>
                 <li><a href="#">library liberty</a></li>
               </ol>
