--- a/video/index.html
+++ b/video/index.html
@@ -34,6 +34,7 @@
           <div class="step small" id="Cross">
             <h1><strong>Cross</strong> 1.44s</h1>
             <p>F L D' F D</p>
+            <div class="blur"></div>
           </div>
           <div class="step big" id="F2L">
             <h1><strong>F2L</strong> 9.82s</h1>
@@ -41,14 +42,17 @@
               U L' U L U' R' U2 R U2 R' U R L U' L' U L U L' U2 y' R' U R x R D'
               R' D x'
             </p>
+            <div class="blur"></div>
           </div>
           <div class="step small" id="OLL">
             <h1><strong>OLL</strong> 1.95s</h1>
             <p>U' F U R U' R' F'</p>
+            <div class="blur"></div>
           </div>
           <div class="step small" id="PLL">
             <h1><strong>PLL</strong> 2.88s</h1>
             <p>U2 R U R' F' R U R' U' R' F R2 U' R' U'</p>
+            <div class="blur"></div>
           </div>
         </section>
       </div>
