--- a/video/index.html
+++ b/video/index.html
@@ -57,6 +57,7 @@
         </section>
       </div>
     </div>
+    <h2>“Hold the vision, trust the process.” ―Unknown</h2>
     <script src="script.js"></script>
   </body>
 </html>
