--- a/video/index.html
+++ b/video/index.html
@@ -14,14 +14,7 @@
   <body>
     <div class="outer-container">
       <div class="inner-container">
-        <video
-          id="video"
-          poster="media/poster.jpg"
-          autoplay
-          loops
-          muted
-          playsinline
-        >
+        <video id="video" poster="media/poster.jpg" autoplay muted playsinline>
           <source src="media/vid.webm" type="video/webm" />
           <source src="media/vid.mp4" type="video/mp4" />
           <p>
