--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             <h3>ministudios</h3>
             <nav>
               <ol>
-                <li><a href="video/">blockbuster video</a></li>
-                <li><a href="#">check yourself</a></li>
+                <li><a href="studio1/">blockbuster video</a></li>
+                <li><a href="studio2/">check yourself</a></li>
                 <li><a href="#">library liberty</a></li>
               </ol>
             </nav>
