--- a/studio2/index.html
+++ b/studio2/index.html
@@ -13,6 +13,10 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div id="data"></div>
+    <div id="sidebar">
+      <h1>hi</h1>
+      <div id="data"></div>
+    </div>
+    <div id="cat-div"></div>
   </body>
 </html>
