--- a/index.html
+++ b/index.html
@@ -109,10 +109,14 @@
             <h3>research</h3>
             <nav>
               <ul>
-                <li><a href="selfie.html">selfie seal</a></li>
+                <li><a href="capstone_research/selfie.html">selfie seal</a></li>
+                <li>
+                  <a href="capstone_research/comparative_analysis.html"
+                    >comparative analysis</a
+                  >
+                </li>
                 <li><a href="#">interviews</a></li>
                 <li><a href="#">annotated bibliography</a></li>
-                <li><a href="#">comparative analysis</a></li>
                 <li><a href="#">visual research</a></li>
                 <li><a href="#">feasibility report</a></li>
               </ul>
