--- a/capstone_research/comparative_analysis.html
+++ b/capstone_research/comparative_analysis.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <a href="https://js13kgames.com/games/re-wire/index.html"
-        ><img src="images/compare1.png" alt="Wires game" width="400px"
+        ><img src="images/compare1.jpg" alt="Wires game" width="400px"
       /></a>
       <p>
         This puzzle game is made purely in js and has a similar scope to
@@ -26,7 +26,7 @@
     </div>
     <div class="container">
       <a href="https://jmankopf.itch.io/dead-fish-pinball"
-        ><img src="images/compare2.png" alt="Pinball game" width="400px"
+        ><img src="images/compare2.jpg" alt="Pinball game" width="400px"
       /></a>
       <p>
         This game was made in a game jam, where you had 2 weeks to come up with
