--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             <h3>research</h3>
             <nav>
               <ul>
-                <li><a href="capstone_research/selfie.html">selfie seal</a></li>
+                <li><a href="capstone/research/selfie.html">selfie seal</a></li>
                 <li>
-                  <a href="capstone_research/comparative_analysis.html"
+                  <a href="capstone/research/comparative_analysis.html"
                     >comparative analysis</a
                   >
                 </li>
@@ -129,7 +129,9 @@
             <nav>
               <ul>
                 <li><a href="#">topic choice</a></li>
-                <li><a href="#">project brief</a></li>
+                <li>
+                  <a href="capstone/development/proposal.html">project brief</a>
+                </li>
                 <li><a href="#">storyboard</a></li>
                 <li><a href="#">flows</a></li>
                 <li><a href="#">interactive comp</a></li>
