--- a/capstone/development/proposal.html
+++ b/capstone/development/proposal.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Proposal</title>
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
