--- a/index.html
+++ b/index.html
@@ -128,9 +128,11 @@
             <h3>development</h3>
             <nav>
               <ul>
-                <li><a href="#">topic choice</a></li>
                 <li>
-                  <a href="capstone/development/proposal.html">project brief</a>
+                  <a href="capstone/development/proposal.html">proposal</a>
+                </li>
+                <li>
+                  <a href="#">project brief</a>
                 </li>
                 <li><a href="#">storyboard</a></li>
                 <li><a href="#">flows</a></li>
