--- a/studio2/index.html
+++ b/studio2/index.html
@@ -11,10 +11,11 @@
     <link href="styles.css" rel="stylesheet" />
 
     <script src="script.js" defer></script>
+    <title>check yourself</title>
   </head>
   <body>
     <div id="sidebar">
-      <h1>hi</h1>
+      <h1>How many cat videos did I see today?</h1>
       <div id="data"></div>
     </div>
     <div id="cat-div"></div>
