--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <nav>
               <ul>
                 <li><a href="#">case study</a></li>
-                <li><a href="#">project</a></li>
+                <li><a href="capstone/project/">project</a></li>
               </ul>
             </nav>
           </section>
