--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
                 <li>
                   <a href="#">project brief</a>
                 </li>
+
+                <li><a href="leaflet">leaflet example</a></li>
                 <li><a href="#">storyboard</a></li>
                 <li><a href="#">flows</a></li>
                 <li><a href="#">interactive comp</a></li>
