--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <ol>
                 <li><a href="studio1/">blockbuster video</a></li>
                 <li><a href="studio2/">check yourself</a></li>
-                <li><a href="#">library liberty</a></li>
+                <li><a href="studio3/">library liberty</a></li>
               </ol>
             </nav>
             <h3>toolkit</h3>
@@ -101,6 +101,8 @@
                 <li><a href="#">touch events</a></li>
                 <li><a href="#">lazy loader</a></li>
                 <li><a href="#">arrow functions</a></li>
+                <li><a href="leaflet">leaflet example</a></li>
+                <li><a href="friends list">friends list</a></li>
               </ol>
             </nav>
           </section>
@@ -135,7 +137,6 @@
                   <a href="#">project brief</a>
                 </li>
 
-                <li><a href="leaflet">leaflet example</a></li>
                 <li><a href="#">storyboard</a></li>
                 <li><a href="#">flows</a></li>
                 <li><a href="#">interactive comp</a></li>
