--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles.css" rel="stylesheet" />
+    </script>
 
     <script src="script.js" defer></script>
+
     <title>Home is...DES 157B!</title>
   </head>
 
@@ -134,7 +136,10 @@
                   <a href="capstone/development/proposal.html">proposal</a>
                 </li>
                 <li>
-                  <a href="#">project brief</a>
+                  <a
+                    href="https://docs.google.com/document/d/1WNKvydAcQOKMuH5L9lyGY9gP_Am6zc2TUHcCSyLirrE/edit#"
+                    >project brief</a
+                  >
                 </li>
 
                 <li><a href="#">storyboard</a></li>
