--- a/studio3/index.html
+++ b/studio3/index.html
@@ -17,7 +17,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles.css" rel="stylesheet" />
 
+    <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
     <script src="script.js" defer></script>
+
     <title>library liberty</title>
   </head>
   <body>
@@ -32,6 +34,7 @@
     </div>
     <div id="game-area">
       <div class="grid-container"></div>
+      <i class="fa-solid fa-robot draggable"></i>
     </div>
   </body>
 </html>
