--- a/studio3/index.html
+++ b/studio3/index.html
@@ -34,7 +34,10 @@
     </div>
     <div id="game-area">
       <div class="grid-container"></div>
-      <i class="fa-solid fa-robot draggable"></i>
+      <footer>
+        <a href="https://interactjs.io/"> interact.js </a>
+        <a href="https://github.com/dcodeIO/long.js"> long.js </a>
+      </footer>
     </div>
   </body>
 </html>
