--- a/studio3/index.html
+++ b/studio3/index.html
@@ -27,7 +27,7 @@
     <div id="sidebar">
       <div class="instructions">
         <div id="buttons">
-          <i class="fa fa-solid fa-circle-question left"></i>
+          <!-- <i class="fa fa-solid fa-circle-question left"></i> -->
           <i class="fa fa-solid fa-stop right"></i>
           <i class="fa fa-solid fa-play right"></i>
         </div>
