--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles.css" rel="stylesheet" />
-    </script>
 
     <script src="script.js" defer></script>
 
@@ -119,8 +118,13 @@
                     >comparative analysis</a
                   >
                 </li>
-                <li><a href="#">interviews</a></li>
                 <li><a href="#">annotated bibliography</a></li>
+                <li>
+                  <a
+                    href="https://docs.google.com/document/d/1s_eAdW1npC8VKDWtn90QC-dIaHHddDOzXlyPwdV3w9Y/edit?usp=sharing"
+                    >interviews</a
+                  >
+                </li>
                 <li><a href="#">visual research</a></li>
                 <li><a href="#">feasibility report</a></li>
               </ul>
