--- a/index.html
+++ b/index.html
@@ -125,7 +125,11 @@
                     >interviews</a
                   >
                 </li>
-                <li><a href="#">visual research</a></li>
+                <li>
+                  <a href="capstone/research/visual_research"
+                    >visual research</a
+                  >
+                </li>
                 <li><a href="#">feasibility report</a></li>
               </ul>
             </nav>
