--- a/index.html
+++ b/index.html
@@ -101,9 +101,13 @@
               <ol>
                 <li><a href="#">touch events</a></li>
                 <li><a href="#">lazy loader</a></li>
-                <li><a href="#">arrow functions</a></li>
+                <li>
+                  <a href="toolkit/arrowfunctionstemplate.html"
+                    >arrow functions</a
+                  >
+                </li>
                 <li><a href="leaflet">leaflet example</a></li>
-                <li><a href="friends list">friends list</a></li>
+                <li><a href="friends_list">friends list</a></li>
               </ol>
             </nav>
           </section>
