--- a/index.html
+++ b/index.html
@@ -134,7 +134,12 @@
                     >visual research</a
                   >
                 </li>
-                <li><a href="#">feasibility report</a></li>
+                <li>
+                  <a
+                    href="https://docs.google.com/document/d/1KybABHUKMpq5C3_p9591TzoIjVooN2-WAS_s4feHn2M/edit?usp=sharing"
+                    >feasibility report</a
+                  >
+                </li>
               </ul>
             </nav>
           </section>
