--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </li>
 
                 <li><a href="#">storyboard</a></li>
-                <li><a href="#">flows</a></li>
+                <li><a href="capstone/development/flows.html">flows</a></li>
                 <li><a href="#">interactive comp</a></li>
                 <li><a href="#">version one</a></li>
                 <li><a href="#">version two</a></li>
