--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
                 </li>
 
                 <li><a href="#">storyboard</a></li>
+                <li>
+                  <a href="capstone/development/sketches.html">sketches</a>
+                </li>
+
                 <li><a href="capstone/development/flows.html">flows</a></li>
                 <li><a href="#">interactive comp</a></li>
                 <li><a href="#">version one</a></li>
