--- a/index.html
+++ b/index.html
@@ -165,7 +165,11 @@
                 </li>
 
                 <li><a href="capstone/development/flows.html">flows</a></li>
-                <li><a href="#">interactive comp</a></li>
+                <li>
+                  <a href="capstone/development/interactive_comp.html"
+                    >interactive comp</a
+                  >
+                </li>
                 <li><a href="#">version one</a></li>
                 <li><a href="#">version two</a></li>
                 <li><a href="#">user test</a></li>
