--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                   >
                 </li>
                 <li><a href="version_one/">version one</a></li>
-                <li><a href="#">version two</a></li>
-                <li><a href="#">user test</a></li>
+                <li><a href="version2/">version two</a></li>
+                <li><a href="usability/">user test</a></li>
                 <li><a href="#">version three</a></li>
               </ul>
             </nav>
