--- a/version2/index.html
+++ b/version2/index.html
@@ -28,7 +28,7 @@
     </div>
     <div id="seal">
       <img src="images/seal.jpg" alt="seal" />
-      <div class="temp-link" onclick="window.location.href='game'">
+      <div class="temp-link" onclick="window.location.href='davis_guessr'">
         eventually each section will be clickable
       </div>
     </div>
