--- a/usability/index.html
+++ b/usability/index.html
@@ -32,5 +32,14 @@
         eventually each section will be clickable
       </div>
     </div>
+    <dialog open id="user">
+      <p>
+        Hi! Please navigate to the game linked on the seal. Then play a quick
+        round. See if you can score over 4000 points.
+      </p>
+      <form method="dialog">
+        <button id="dialog-click">OK</button>
+      </form>
+    </dialog>
   </body>
 </html>
