--- a/version3/davis_guessr/index.html
+++ b/version3/davis_guessr/index.html
@@ -38,8 +38,8 @@
 
     <img id="img" />
     <div id="map-div">
-      <div id="map"></div>
-      <!-- <i class="fa-solid fa-maximize"></i> -->
+      <div id="map" class="max"></div>
+      <i class="fa-solid fa-compress"></i>
       <div id="guess">Guess</div>
     </div>
   </body>
