--- a/usability/index.html
+++ b/usability/index.html
@@ -35,12 +35,14 @@
           class="inner"
           id="mask1"
           alt="mask1IMG"
+          onclick="window.location.href='davis_guessr'"
         />
         <img
           src="media/Mask group-5.png"
           class="inner"
           id="mask2"
           alt="mask2IMG"
+          onclick="window.location.href='soccer'"
         />
         <img
           src="media/Mask group-7.png"
