--- a/usability/davis_guessr/index.html
+++ b/usability/davis_guessr/index.html
@@ -28,7 +28,11 @@
     <title>Davis Guesser</title>
   </head>
   <body>
-    <div id="back" onclick="window.location.href='..'">Go back</div>
+    <i
+      class="fa fa-arrow-left"
+      id="back"
+      onclick="window.location.href='..'"
+    ></i>
     <dialog>
       <p></p>
       <form method="dialog">
