--- a/version3/soccer/index.html
+++ b/version3/soccer/index.html
@@ -13,6 +13,8 @@
     <title>soccer</title>
   </head>
   <body>
+    <div id="back" onclick="window.location.href='..'">Go back</div>
+
     <canvas id="canvas"></canvas>
   </body>
 </html>
