--- a/version3/index.html
+++ b/version3/index.html
@@ -10,7 +10,7 @@
     <link href="styles.css" rel="stylesheet" />
     <script src="script.js" defer></script>
 
-    <title>version 1</title>
+    <title>version 3</title>
   </head>
   <body>
     <div id="sidebar">
@@ -26,13 +26,60 @@
         <a href="#">link 4</a><br />
       </div>
     </div>
+
     <div id="seal">
-      <img src="images/seal.jpg" alt="seal" />
-      <div class="temp-link" onclick="window.location.href='davis_guessr'">
-        eventually each section will be clickable
-      </div>
-      <div class="temp-link-2" onclick="window.location.href='soccer'">
-        eventually each section will be clickable
+      <img src="media/background.png" id="bg" alt="backgroundIMG" />
+      <div class="seal-main">
+        <img
+          src="media/Mask group-4.png"
+          class="inner"
+          id="mask1"
+          alt="mask1IMG"
+          onclick="window.location.href='davis_guessr'"
+        />
+        <img
+          src="media/Mask group-5.png"
+          class="inner"
+          id="mask2"
+          alt="mask2IMG"
+          onclick="window.location.href='soccer'"
+        />
+        <img
+          src="media/Mask group-7.png"
+          class="inner"
+          id="mask3"
+          alt="mask3IMG"
+        />
+        <img
+          src="media/Mask group-6.png"
+          class="inner"
+          id="mask4"
+          alt="mask4IMG"
+        />
+        <img
+          src="media/Mask group-3.png"
+          class="inner"
+          id="mask5"
+          alt="mask5IMG"
+        />
+        <img
+          src="media/Mask group-2.png"
+          class="inner"
+          id="mask6"
+          alt="mask6IMG"
+        />
+        <img
+          src="media/Mask group-8.png"
+          class="inner"
+          id="mask7"
+          alt="mask7IMG"
+        />
+        <img
+          src="media/Mask group-1.png"
+          class="inner"
+          id="mask8"
+          alt="mask8IMG"
+        />
       </div>
     </div>
   </body>
