--- a/version3/soccer/index.html
+++ b/version3/soccer/index.html
@@ -6,6 +6,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="styles.css" rel="stylesheet" />
     <script src="script.js" defer></script>
@@ -13,8 +17,11 @@
     <title>soccer</title>
   </head>
   <body>
-    <div id="back" onclick="window.location.href='..'">Go back</div>
-
+    <i
+      class="fa fa-arrow-left"
+      id="back"
+      onclick="window.location.href='..'"
+    ></i>
     <canvas id="canvas"></canvas>
   </body>
 </html>
