--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <li>
                   <a href="usabilityResult/">usability testing results</a>
                 </li>
-                <li><a href="#">version three</a></li>
+                <li><a href="version3/">version three</a></li>
               </ul>
             </nav>
           </section>
