--- a/version3/soccer/index.html
+++ b/version3/soccer/index.html
@@ -22,6 +22,10 @@
       id="back"
       onclick="window.location.href='..'"
     ></i>
-    <canvas id="canvas"></canvas>
+    <div id="game">
+      <div class="bar"></div>
+      <canvas id="canvas"></canvas>
+      <div class="bar"></div>
+    </div>
   </body>
 </html>
