--- a/version3/index.html
+++ b/version3/index.html
@@ -16,14 +16,24 @@
     <div id="sidebar">
       <div id="summary">
         <h1>What is this?</h1>
-        <p>summary goes here...</p>
+        <p>
+          This is a project surrounding the Davis Centennial Seal! The
+          Centennial Seal tells the history of the city and several main themes
+          that have allowed the city to evolve into what it is today. We decided
+          to make several minigames relating to several key aspects of the seal.
+        </p>
       </div>
       <div id="useful-links">
         <h2>Useful Links</h2>
-        <a href="#">link 1</a><br />
-        <a href="#">link 2</a><br />
-        <a href="#">link 3</a><br />
-        <a href="#">link 4</a><br />
+        <a
+          href="https://www.cityofdavis.org/city-hall/city-manager-s-office/arts-culture/davis-centennial-seal"
+          >Official Davis Centennial Seal Website</a
+        ><br />
+        <a href="https://susanshelton.com/Seals/Davis-Centennial-Seal"
+          >Susan Shelton's Website</a
+        ><br />
+        <!-- <a href="#">link 3</a><br />
+        <a href="#">link 4</a><br /> -->
       </div>
     </div>
 
