--- a/index.html
+++ b/index.html
@@ -185,7 +185,12 @@
             <h3>capstone</h3>
             <nav>
               <ul>
-                <li><a href="#">case study</a></li>
+                <li>
+                  <a
+                    href="https://docs.google.com/presentation/d/1DLm4P5-hklPo3XR-XByzdsZhFxwkGqzCrAJ5OZyNMcA/edit?usp=sharing"
+                    >presentation</a
+                  >
+                </li>
                 <li><a href="capstone/project/">project</a></li>
               </ul>
             </nav>
