--- a/version3/index.html
+++ b/version3/index.html
@@ -76,6 +76,7 @@
           class="inner"
           id="mask6"
           alt="mask6IMG"
+          onclick="window.location.href='trivia'"
         />
         <img
           src="media/Mask group-8.png"
