--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     >presentation</a
                   >
                 </li>
-                <li><a href="capstone/project/">project</a></li>
+                <li><a href="version3/">project</a></li>
               </ul>
             </nav>
           </section>
